force-app/main/default/objects/sfFma__FeatureParameterInteger__c/fields/sfFma__FeatureParameter__c.field-meta.xml
<CustomField>
    <fullName>sfFma__FeatureParameter__c</fullName>
    <description>The parent Feature Parameter object.</description>
    <label>Feature Parameter</label>
    <referenceTo>sfFma__FeatureParameter__c</referenceTo>
    <relationshipLabel>Feature Parameter Integers</relationshipLabel>
    <relationshipName>Feature_Parameter_Integers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>