force-app/main/default/objects/sfFma__FeatureParameterInteger__c/fields/sfFma__License__c.field-meta.xml
<CustomField>
    <fullName>sfFma__License__c</fullName>
    <label>License</label>
    <referenceTo>sfLma__License__c</referenceTo>
    <relationshipLabel>Feature Parameter Integers</relationshipLabel>
    <relationshipName>Feature_Parameter_Integers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>