force-app/main/default/objects/sfFma__FeatureParameterInteger__c/fields/sfFma__Value__c.field-meta.xml
<CustomField>
    <fullName>sfFma__Value__c</fullName>
    <label>Feature Parameter Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>